Fix SJH opens for tests
Signed-off-by: cpw <cpw+github@weeksfamily.ca>